crates/parser/tests/snapshots/lexer_test__all_keywords.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "lex(\"def fn let if match type do receive recur send spawn self own trait impl import list tuple deriving\")"
---
- Def
- Fn
- Let
- If
- Match
- Type
- Do
- Ident: receive
- Recur
- Ident: send
- Ident: spawn
- Self_
- Own
- Trait
- Impl
- Import
- List
- Tuple
- Deriving
