crates/parser/tests/snapshots/lexer_test__all_operators.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "lex(\"+ - * / == != < > <= >= ? | . : _\")"
---
- Plus
- Minus
- Star
- Slash
- Eq
- Neq
- Lt
- Gt
- Le
- Ge
- Question
- Pipe
- Dot
- Colon
- Underscore
