crates/parser/tests/snapshots/lexer_test__arrow_vs_minus.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"-> -\")"
---
- Arrow
- Minus
