crates/parser/tests/snapshots/lexer_test__basic_arithmetic.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "lex(\"(+ 1 2)\")"
---
- LParen
- Plus
- Int: 1
- Int: 2
- RParen
