crates/parser/tests/snapshots/lexer_test__bool_literals.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "lex(\"true false\")"
---
- Bool: true
- Bool: false
