crates/parser/tests/snapshots/lexer_test__comment.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "lex(\"# this is a comment\\n(+ 1 2)\")"
---
- LParen
- Plus
- Int: 1
- Int: 2
- RParen
