crates/parser/tests/snapshots/lexer_test__comment_after_token.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"42 # trailing comment\")"
---
- Int: 42
