crates/parser/tests/snapshots/lexer_test__eq_vs_assign_vs_fat_arrow.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"== = =>\")"
---
- Eq
- Assign
- FatArrow
