crates/parser/tests/snapshots/lexer_test__float_literals.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "surface_lex(\"3.14 0.5\")"
---
- Float: 3.14
- Float: 0.5
