crates/parser/tests/snapshots/lexer_test__keywords_and_brackets.snap
---
source: crates/parser/tests/lexer_test.rs
expression: "lex(\"(def foo (fn [x] Int x))\")"
---
- LParen
- Def
- Ident: foo
- LParen
- Fn
- LBracket
- Ident: x
- RBracket
- Ident: Int
- Ident: x
- RParen
- RParen
